--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@tanstack/react-query": "^5.51.23",
+    "@upstash/ratelimit": "^2.0.1",
+    "@upstash/redis": "^1.34.0",
     "axios": "^1.7.3",
     "next": "14.2.5",
     "openai": "^4.54.0",
